Homepage spacing fixes, made buttons more spaced out

--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -17,7 +17,7 @@
 
 .i-left-wrapper{
     padding: 50px;
-    height: 60%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -104,7 +104,7 @@
 }
 
 .i-icons{
-    width: 60%;
+    width: 70%;
     size: 3em;
     display: flex;
     flex-direction:row;
